fix(<CelebrityInfoReviews />): :lipstick: Change styles to center the content when is wrapped

--- a/desktop-app/components/celebrity-profile/celebrity-info-reviews/styles.module.scss
+++ b/desktop-app/components/celebrity-profile/celebrity-info-reviews/styles.module.scss
@@ -1,7 +1,11 @@
+.CelebrityInfoReviews {
+  text-align: center;
+  word-spacing: 0.75rem;
+}
 .showReviewsModal {
   cursor: pointer;
 
-  &:hover {
+  &:hover span {
     text-decoration: underline var(--dark);
   }
 }
